css/style.css
body{
    font-family: Arial, sans-serif;
    margin: 0px;
    background:#f4f4f4;
}

header{
    background:#2c3e50;
    color:white;
    text-align:center;
    padding:30px;
}

nav{
background:#2c3e50;
padding:15px;
text-align:center;

position:sticky;
top:0;
z-index:1000;
}

nav a{
    color:white;
    margin:15px;
    text-decoration:none;
    font-weight:bold;
}

nav a:hover{
    color:#f1c40f;
}

.hero{
    text-align:center;
    padding:60px;
    background:#ecf0f1;
}

.content{
    display:flex;
    justify-content:center;
    gap:20px;
    padding:40px;
}

.card{
    background:white;
    padding:20px;
    width:250px;
    border-radius:8px;
    box-shadow:0 2px 8px rgb(0, 255, 251);
}

footer{
    background:#2c3e50;
    color:white;
    text-align:center;
    padding:20px;
    margin-top:40px;
}
.hero{
position:relative;
text-align:center;
color:white;
}

.hero img{
width:100%;
height:550px;
object-fit:cover;
filter:brightness(60%);
}

.hero-text{
position:absolute;
top:50%;
left:50%;
transform:translate(-50%,-50%);
}

.hero-text h2{
font-size:40px;
margin-bottom:10px;
}

.hero-text p{
font-size:18px;
}
.card h3{
font-size:20px;
margin-bottom:10px;
}
.tip{
background:#ecf0f1;
padding:40px;
text-align:center;
margin:40px;
border-radius:10px;
}

.tip h2{
margin-bottom:15px;
}
.hero{
background-image: url("../images/campus.jpg");
background-size: cover;
background-position: center;
padding: 120px 20px;
}
#topBtn{
display:none;
position:fixed;
bottom:30px;
right:30px;
z-index:99;
border:none;
outline:none;
background-color:#0d6efd;
color:white;
cursor:pointer;
padding:12px 16px;
border-radius:8px;
font-size:18px;
}

#topBtn:hover{
background-color:#333;
}
.card:hover{
transform: scale(1.05);
transition: 0.3s;
}
#tipBox{
    font-size: 18px;
    font-weight: 500;
}
.card{
word-wrap: break-word;
}
.card img{
height:200px;
object-fit:cover;
}
.card {
text-align: center;
border-radius: 12px;
}

